--- a/apps/client/public/index.css
+++ b/apps/client/public/index.css
@@ -1,26 +1,4 @@
-* {
-	box-sizing: border-box;
-}
-
-body {
-	height: 100vh;
-	margin: 0;
-	padding: 0;
-	color: var(--color-text);
-	background-color: var(--color-background);
-	font-size: 1em;
-	font-family: 'consolas';
-}
-
-
-.screen-container {
-
-}
-
-.screen-center-message {
-
-}
-
-.error-message {
-
-}
+@import 'css/variables.css';
+@import 'css/base.css';
+@import 'css/screenContainer.css';
+@import 'css/button.css';
