--- a/apps/client/public/css/button.css
+++ b/apps/client/public/css/button.css
@@ -1,10 +1,8 @@
 
 .btn {
 	border: none;
-	font-size: 1.2rem;
-	margin: 0.5rem;
-	padding: 0.5rem 1rem;
-	border-radius: 10px;
+	padding: 0.375rem 0.75rem;
+	border-radius: 0.25rem;
 }
 
 .secondary {
@@ -14,6 +12,16 @@
 
 .secondary.subdued {
     background-color: var(--color-secondary-subdued);
+}
+
+.outline {
+	border: 1px solid;
+}
+
+.primary.outline {
+	color: var(--color-primary);
+	border-color: var(--color-primary);
+	background-color: var(--color-on-primary);
 }
 
 .btn:hover, .btn:active {
