--- a/apps/client/public/css/screenContainer.css
+++ b/apps/client/public/css/screenContainer.css
@@ -31,8 +31,8 @@
     font-weight: bold;
 }
 
-.screen-container__nav__buttons {
-
+.screen-container__nav__buttons button {
+    margin-left: 2rem;
 }
 
 .screen-container__content {
