--- a/apps/client/public/css/base.css
+++ b/apps/client/public/css/base.css
@@ -13,3 +13,9 @@ body {
 	font-size: 1rem;
 	font-family: 'Noto Sans';
 }
+
+.error-message {
+	color: var(--color-primary);
+	font-weight: bold;
+	font-family: 'consolas';
+}
