--- a/apps/client/public/css/screenContainer.css
+++ b/apps/client/public/css/screenContainer.css
@@ -1,6 +1,10 @@
 .screen-container {
     width: 100%;
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
 }
 
 .screen-container__nav {
