--- a/apps/client/public/css/post.css
+++ b/apps/client/public/css/post.css
@@ -15,10 +15,13 @@
     align-items: flex-start;
     max-width: 600px;
     font-size: 0.8rem;
-    margin-top: 2rem;
     padding: var(--post-inner-spacing);
     border-radius: 8px;
     box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.35);
+}
+
+.post:not(:first-child) {
+    margin-top: 1rem;
 }
 
 .post__date {
