--- a/apps/client/public/css/screenContainer.css
+++ b/apps/client/public/css/screenContainer.css
@@ -1,6 +1,5 @@
 .screen-container {
     width: 100%;
-    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -40,5 +39,5 @@
 }
 
 .screen-container__content {
-    margin: 1rem;
+    padding: 1rem;
 }
