--- a/apps/client/public/css/screenContainer.css
+++ b/apps/client/public/css/screenContainer.css
@@ -39,5 +39,10 @@
 }
 
 .screen-container__content {
+    width: 100%;
     padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
 }
