--- a/apps/client/public/css/post.css
+++ b/apps/client/public/css/post.css
@@ -1,5 +1,7 @@
 
 .posts-container {
+    width: 100%;
+    max-width: 600px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -9,15 +11,15 @@
 .post {
     --post-inner-spacing: 0.8rem;
 
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: flex-start;
-    max-width: 600px;
     font-size: 0.8rem;
     padding: var(--post-inner-spacing);
     border-radius: 8px;
-    box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.35);
+    box-shadow: 0px 0px 6px 0px var(--color-shadow);
 }
 
 .post:not(:first-child) {
