--- a/apps/client/public/css/variables.css
+++ b/apps/client/public/css/variables.css
@@ -2,6 +2,8 @@
     --color-primary: #724ed0;
     --color-secondary: #ed1b92;
     --color-secondary-subdued: #e3a6c8;
+    --color-danger: #dc3545;
     --color-on-primary: #ffffff;
     --color-text: #1D2125;
+    --color-shadow: rgba(0, 0, 0, 0.35);
 }
