--- a/apps/client/public/css/variables.css
+++ b/apps/client/public/css/variables.css
@@ -5,5 +5,6 @@
     --color-danger: #dc3545;
     --color-on-primary: #ffffff;
     --color-text: #1D2125;
+    --color-light-text: #555657;
     --color-shadow: rgba(0, 0, 0, 0.35);
 }
