--- a/apps/client/public/index.css
+++ b/apps/client/public/index.css
@@ -1,5 +1,6 @@
 @import 'css/variables.css';
 @import 'css/base.css';
+@import 'css/about.css';
 @import 'css/button.css';
 @import 'css/createPost.css';
 @import 'css/post.css';
